--- a/Object-detection/Readme.pd
+++ b/Object-detection/Readme.pd
@@ -1,1 +1,24 @@
+# YOLOv1 Object Detection
+This repository demonstrates the use of YOLOv1 (You Only Look Once) for real-time object detection. The model is designed to detect and classify objects in images, offering efficient and accurate results. Additionally, it includes essential metrics for evaluating the performance of object detection models, such as Intersection over Union (IoU), Mean Average Precision (mAP), and Non-Maximum Suppression (NMS).
 
+## Directory Structure
+## YOLOv1_Model.py: 
+Contains the core implementation of the YOLOv1 model for object detection using PyTorch.
+
+## Intersection_over_Union.py:
+Script to compute the IoU metric, used to evaluate the accuracy of predicted bounding boxes.
+
+## mAP.py:
+Calculates Mean Average Precision, an important metric for evaluating the performance of detection models across multiple classes.
+
+## NMS.py: 
+Implements Non-Maximum Suppression, a technique to eliminate duplicate bounding boxes by selecting the most confident predictions.
+
+## Features
+Real-time Object Detection: YOLOv1 offers fast and accurate detection of multiple objects in images and videos.
+
+Evaluation Metrics: Built-in tools to calculate IoU, mAP, and NMS, essential for evaluating detection performance.
+
+Customizable: Modify the scripts for various types of object detection tasks or datasets.
+
+Usage
